Changed swagger.
